--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -97,7 +97,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:padding="5dp"
+        android:background="@drawable/gridback">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -106,35 +108,35 @@
 
             <Button
                 android:id="@+id/button1"
-                android:layout_width="85dp"
-                android:layout_height="85dp"
+                android:layout_width="80dp"
+                android:layout_height="95dp"
                 android:text="1"
                 android:textColor="@color/textColor"
-                android:textSize="45sp"
+                android:textSize="37sp"
                 android:fontFamily="@font/poppins_medium"
                 android:tag="00"
                 android:onClick="btnClick"
                 />
             <Button
                 android:id="@+id/button2"
-                android:layout_width="85dp"
-                android:layout_height="85dp"
+                android:layout_width="80dp"
+                android:layout_height="95dp"
                 android:text="2"
                 android:textColor="@color/textColor"
-                android:textSize="45sp"
+                android:textSize="37sp"
                 android:fontFamily="@font/poppins_medium"
                 android:textAlignment="center"
-                android:layout_marginHorizontal="5dp"
+                android:layout_marginHorizontal="10dp"
                 android:tag="01"
                 android:onClick="btnClick"
                 />
             <Button
                 android:id="@+id/button3"
-                android:layout_width="85dp"
-                android:layout_height="85dp"
+                android:layout_width="80dp"
+                android:layout_height="95dp"
                 android:text="3"
                 android:textColor="@color/textColor"
-                android:textSize="45sp"
+                android:textSize="37sp"
                 android:fontFamily="@font/poppins_medium"
                 android:textAlignment="center"
                 android:tag="02"
@@ -142,12 +144,12 @@
                 />
             <Button
                 android:id="@+id/button4"
-                android:layout_width="85dp"
-                android:layout_height="85dp"
+                android:layout_width="80dp"
+                android:layout_height="95dp"
                 android:text="4"
-                android:layout_marginStart="5dp"
+                android:layout_marginStart="10dp"
                 android:textColor="@color/textColor"
-                android:textSize="45sp"
+                android:textSize="37sp"
                 android:fontFamily="@font/poppins_medium"
                 android:textAlignment="center"
                 android:tag="03"
@@ -161,35 +163,35 @@
 
             <Button
                 android:id="@+id/button5"
-                android:layout_width="85dp"
-                android:layout_height="85dp"
+                android:layout_width="80dp"
+                android:layout_height="95dp"
                 android:text="5"
                 android:textColor="@color/textColor"
-                android:textSize="45sp"
+                android:textSize="37sp"
                 android:fontFamily="@font/poppins_medium"
                 android:tag="10"
                 android:onClick="btnClick"
                 />
             <Button
                 android:id="@+id/button6"
-                android:layout_width="85dp"
-                android:layout_height="85dp"
+                android:layout_width="80dp"
+                android:layout_height="95dp"
                 android:text="6"
                 android:textColor="@color/textColor"
-                android:textSize="45sp"
+                android:textSize="37sp"
                 android:fontFamily="@font/poppins_medium"
                 android:textAlignment="center"
-                android:layout_marginHorizontal="5dp"
+                android:layout_marginHorizontal="10dp"
                 android:tag="11"
                 android:onClick="btnClick"
                 />
             <Button
                 android:id="@+id/button7"
-                android:layout_width="85dp"
-                android:layout_height="85dp"
+                android:layout_width="80dp"
+                android:layout_height="95dp"
                 android:text="7"
                 android:textColor="@color/textColor"
-                android:textSize="45sp"
+                android:textSize="37sp"
                 android:fontFamily="@font/poppins_medium"
                 android:textAlignment="center"
                 android:tag="12"
@@ -197,12 +199,12 @@
                 />
             <Button
                 android:id="@+id/button8"
-                android:layout_width="85dp"
-                android:layout_height="85dp"
+                android:layout_width="80dp"
+                android:layout_height="95dp"
                 android:text="8"
-                android:layout_marginStart="5dp"
+                android:layout_marginStart="10dp"
                 android:textColor="@color/textColor"
-                android:textSize="45sp"
+                android:textSize="37sp"
                 android:fontFamily="@font/poppins_medium"
                 android:textAlignment="center"
                 android:tag="13"
@@ -216,35 +218,35 @@
 
             <Button
                 android:id="@+id/button9"
-                android:layout_width="85dp"
-                android:layout_height="85dp"
+                android:layout_width="80dp"
+                android:layout_height="95dp"
                 android:text="9"
                 android:textColor="@color/textColor"
-                android:textSize="45sp"
+                android:textSize="37sp"
                 android:fontFamily="@font/poppins_medium"
                 android:tag="20"
                 android:onClick="btnClick"
                 />
             <Button
                 android:id="@+id/button10"
-                android:layout_width="85dp"
-                android:layout_height="85dp"
+                android:layout_width="80dp"
+                android:layout_height="95dp"
                 android:text="10"
                 android:textColor="@color/textColor"
-                android:textSize="45sp"
+                android:textSize="37sp"
                 android:fontFamily="@font/poppins_medium"
                 android:textAlignment="center"
-                android:layout_marginHorizontal="5dp"
+                android:layout_marginHorizontal="10dp"
                 android:tag="21"
                 android:onClick="btnClick"
                 />
             <Button
                 android:id="@+id/button11"
-                android:layout_width="85dp"
-                android:layout_height="85dp"
+                android:layout_width="80dp"
+                android:layout_height="95dp"
                 android:text="11"
                 android:textColor="@color/textColor"
-                android:textSize="45sp"
+                android:textSize="37sp"
                 android:fontFamily="@font/poppins_medium"
                 android:textAlignment="center"
                 android:tag="22"
@@ -252,12 +254,12 @@
                 />
             <Button
                 android:id="@+id/button12"
-                android:layout_width="85dp"
-                android:layout_height="85dp"
+                android:layout_width="80dp"
+                android:layout_height="95dp"
                 android:text="12"
-                android:layout_marginStart="5dp"
+                android:layout_marginStart="10dp"
                 android:textColor="@color/textColor"
-                android:textSize="45sp"
+                android:textSize="37sp"
                 android:fontFamily="@font/poppins_medium"
                 android:textAlignment="center"
                 android:tag="23"
@@ -271,35 +273,35 @@
 
             <Button
                 android:id="@+id/button13"
-                android:layout_width="85dp"
-                android:layout_height="85dp"
+                android:layout_width="80dp"
+                android:layout_height="95dp"
                 android:text="13"
                 android:textColor="@color/textColor"
-                android:textSize="45sp"
+                android:textSize="37sp"
                 android:fontFamily="@font/poppins_medium"
                 android:tag="30"
                 android:onClick="btnClick"
                 />
             <Button
                 android:id="@+id/button14"
-                android:layout_width="85dp"
-                android:layout_height="85dp"
+                android:layout_width="80dp"
+                android:layout_height="95dp"
                 android:text="14"
                 android:textColor="@color/textColor"
-                android:textSize="45sp"
+                android:textSize="37sp"
                 android:fontFamily="@font/poppins_medium"
                 android:textAlignment="center"
-                android:layout_marginHorizontal="5dp"
+                android:layout_marginHorizontal="10dp"
                 android:tag="31"
                 android:onClick="btnClick"
                 />
             <Button
                 android:id="@+id/button15"
-                android:layout_width="85dp"
-                android:layout_height="85dp"
+                android:layout_width="80dp"
+                android:layout_height="95dp"
                 android:text="15"
                 android:textColor="@color/textColor"
-                android:textSize="45sp"
+                android:textSize="37sp"
                 android:fontFamily="@font/poppins_medium"
                 android:textAlignment="center"
                 android:tag="32"
@@ -307,11 +309,11 @@
                 />
             <Button
                 android:id="@+id/button16"
-                android:layout_width="85dp"
-                android:layout_height="85dp"
-                android:layout_marginStart="5dp"
+                android:layout_width="80dp"
+                android:layout_height="95dp"
+                android:layout_marginStart="10dp"
                 android:textColor="@color/textColor"
-                android:textSize="45sp"
+                android:textSize="37sp"
                 android:fontFamily="@font/poppins_medium"
                 android:textAlignment="center"
                 android:tag="33"
