--- a/app/src/main/res/layout/go_back_dialog.xml
+++ b/app/src/main/res/layout/go_back_dialog.xml
@@ -11,28 +11,18 @@
     android:background="@drawable/dialogs_back">
 
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="10dp"
-        android:src="@drawable/ic_baseline_question_mark_24"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/white" />
-
     <TextView
-        android:layout_marginStart="10dp"
+        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:fontFamily="@font/poppins_medium"
         android:text="Question"
-        android:textColor="@color/textColor"
+        android:textColor="@color/secondaryTextColor"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
@@ -41,10 +31,12 @@
         android:fontFamily="@font/poppins_medium"
         android:text="Do you want exit?"
         android:textColor="@color/textColor"
-        android:textSize="25sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        app:layout_constraintVertical_bias="0.361" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -60,6 +52,7 @@
             android:id="@+id/yesBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins_medium"
             android:backgroundTint="@color/matchingPaletteColor"
             android:text="Yes" />
 
@@ -68,6 +61,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="60dp"
+            android:fontFamily="@font/poppins_medium"
             android:backgroundTint="@color/matchingPaletteColor"
             android:text="No" />
 
