--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -30,7 +30,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-        app:tint="@color/foruthColor" />
+        app:tint="@color/shuffleBtnColor" />
 
     <ImageView
         android:id="@+id/goBackbtn"
@@ -131,6 +131,7 @@
             android:orientation="horizontal">
 
             <Button
+                android:elevation="5dp"
                 android:id="@+id/button1"
                 android:layout_width="80dp"
                 android:layout_height="95dp"
@@ -142,6 +143,7 @@
                 android:textSize="37sp" />
 
             <Button
+                android:elevation="5dp"
                 android:id="@+id/button2"
                 android:layout_width="80dp"
                 android:layout_height="95dp"
@@ -155,6 +157,7 @@
                 android:textSize="37sp" />
 
             <Button
+                android:elevation="5dp"
                 android:id="@+id/button3"
                 android:layout_width="80dp"
                 android:layout_height="95dp"
@@ -167,6 +170,7 @@
                 android:textSize="37sp" />
 
             <Button
+                android:elevation="5dp"
                 android:id="@+id/button4"
                 android:layout_width="80dp"
                 android:layout_height="95dp"
@@ -186,6 +190,7 @@
             android:orientation="horizontal">
 
             <Button
+                android:elevation="5dp"
                 android:id="@+id/button5"
                 android:layout_width="80dp"
                 android:layout_height="95dp"
@@ -197,6 +202,7 @@
                 android:textSize="37sp" />
 
             <Button
+                android:elevation="5dp"
                 android:id="@+id/button6"
                 android:layout_width="80dp"
                 android:layout_height="95dp"
@@ -210,6 +216,7 @@
                 android:textSize="37sp" />
 
             <Button
+                android:elevation="5dp"
                 android:id="@+id/button7"
                 android:layout_width="80dp"
                 android:layout_height="95dp"
@@ -222,6 +229,7 @@
                 android:textSize="37sp" />
 
             <Button
+                android:elevation="5dp"
                 android:id="@+id/button8"
                 android:layout_width="80dp"
                 android:layout_height="95dp"
@@ -241,6 +249,7 @@
             android:orientation="horizontal">
 
             <Button
+                android:elevation="5dp"
                 android:id="@+id/button9"
                 android:layout_width="80dp"
                 android:layout_height="95dp"
@@ -252,6 +261,7 @@
                 android:textSize="37sp" />
 
             <Button
+                android:elevation="5dp"
                 android:id="@+id/button10"
                 android:layout_width="80dp"
                 android:layout_height="95dp"
@@ -265,6 +275,7 @@
                 android:textSize="37sp" />
 
             <Button
+                android:elevation="5dp"
                 android:id="@+id/button11"
                 android:layout_width="80dp"
                 android:layout_height="95dp"
@@ -277,6 +288,7 @@
                 android:textSize="37sp" />
 
             <Button
+                android:elevation="5dp"
                 android:id="@+id/button12"
                 android:layout_width="80dp"
                 android:layout_height="95dp"
@@ -296,6 +308,7 @@
             android:orientation="horizontal">
 
             <Button
+                android:elevation="5dp"
                 android:id="@+id/button13"
                 android:layout_width="80dp"
                 android:layout_height="95dp"
@@ -307,6 +320,7 @@
                 android:textSize="37sp" />
 
             <Button
+                android:elevation="5dp"
                 android:id="@+id/button14"
                 android:layout_width="80dp"
                 android:layout_height="95dp"
@@ -320,6 +334,7 @@
                 android:textSize="37sp" />
 
             <Button
+                android:elevation="5dp"
                 android:id="@+id/button15"
                 android:layout_width="80dp"
                 android:layout_height="95dp"
@@ -332,6 +347,7 @@
                 android:textSize="37sp" />
 
             <Button
+                android:elevation="5dp"
                 android:id="@+id/button16"
                 android:layout_width="80dp"
                 android:layout_height="95dp"
