--- a/app/src/main/res/layout/win_dialog.xml
+++ b/app/src/main/res/layout/win_dialog.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:padding="5dp"
@@ -13,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/poppins_medium"
-        android:text="Congrantulations!"
+        android:text="@string/congrantulations"
         android:textColor="@color/secondaryTextColor"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,29 +34,34 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
+        android:layout_marginHorizontal="10dp"
         app:cardCornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="250dp"
             android:layout_height="match_parent"
             android:gravity="center"
+            android:layout_marginHorizontal="10dp"
             android:orientation="horizontal"
             android:padding="15dp">
 
             <TextView
                 android:id="@+id/movesTvDialog"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:singleLine="true"
                 android:layout_height="wrap_content"
                 android:text="Moves:" />
 
             <TextView
                 android:id="@+id/timeTvDialog"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:gravity="end"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="100dp"
                 android:text="Time:" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
