--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="textColor">#E9FEF4</color>
     <color name="secondaryTextColor">#f9e491</color>
     <color name="matchingPaletteColor">#2C7DC2</color>
-    <color name="thirdColor">#C98430</color>
+    <color name="thirdColor">#faab1a</color>
     <color name="foruthColor">#1D1D35</color>
     <color name="shuffleBtnColor">#00684B</color>
 
