--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GameActivity"
-    android:background="@drawable/background1">
+    android:background="@drawable/background1"
+    tools:context=".GameActivity">
 
     <TextView
         android:id="@+id/recordTV"
@@ -36,11 +35,11 @@
         android:id="@+id/goBackbtn"
         android:layout_width="45dp"
         android:layout_height="45dp"
-        android:layout_marginTop="10dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/go_back_btn_back"
         android:paddingStart="10dp"
         android:src="@drawable/ic_baseline_arrow_back_ios_24"
-        android:background="@drawable/go_back_btn_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:tint="@color/textColor" />
@@ -56,6 +55,7 @@
         app:layout_constraintHorizontal_bias="0.686"
         app:layout_constraintStart_toStartOf="@+id/goBackbtn"
         app:layout_constraintTop_toTopOf="@+id/goBackbtn">
+
         <LinearLayout
             android:id="@+id/linearLayout"
             android:layout_width="wrap_content"
@@ -85,6 +85,7 @@
                 android:textSize="20dp" />
 
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -131,10 +132,10 @@
             android:orientation="horizontal">
 
             <Button
-                android:elevation="5dp"
                 android:id="@+id/button1"
                 android:layout_width="80dp"
                 android:layout_height="95dp"
+                android:elevation="5dp"
                 android:fontFamily="@font/poppins_medium"
                 android:onClick="btnClick"
                 android:tag="00"
@@ -143,11 +144,11 @@
                 android:textSize="37sp" />
 
             <Button
-                android:elevation="5dp"
                 android:id="@+id/button2"
                 android:layout_width="80dp"
                 android:layout_height="95dp"
                 android:layout_marginHorizontal="10dp"
+                android:elevation="5dp"
                 android:fontFamily="@font/poppins_medium"
                 android:onClick="btnClick"
                 android:tag="01"
@@ -157,10 +158,10 @@
                 android:textSize="37sp" />
 
             <Button
-                android:elevation="5dp"
                 android:id="@+id/button3"
                 android:layout_width="80dp"
                 android:layout_height="95dp"
+                android:elevation="5dp"
                 android:fontFamily="@font/poppins_medium"
                 android:onClick="btnClick"
                 android:tag="02"
@@ -170,11 +171,11 @@
                 android:textSize="37sp" />
 
             <Button
-                android:elevation="5dp"
                 android:id="@+id/button4"
                 android:layout_width="80dp"
                 android:layout_height="95dp"
                 android:layout_marginStart="10dp"
+                android:elevation="5dp"
                 android:fontFamily="@font/poppins_medium"
                 android:onClick="btnClick"
                 android:tag="03"
@@ -190,10 +191,10 @@
             android:orientation="horizontal">
 
             <Button
-                android:elevation="5dp"
                 android:id="@+id/button5"
                 android:layout_width="80dp"
                 android:layout_height="95dp"
+                android:elevation="5dp"
                 android:fontFamily="@font/poppins_medium"
                 android:onClick="btnClick"
                 android:tag="10"
@@ -202,11 +203,11 @@
                 android:textSize="37sp" />
 
             <Button
-                android:elevation="5dp"
                 android:id="@+id/button6"
                 android:layout_width="80dp"
                 android:layout_height="95dp"
                 android:layout_marginHorizontal="10dp"
+                android:elevation="5dp"
                 android:fontFamily="@font/poppins_medium"
                 android:onClick="btnClick"
                 android:tag="11"
@@ -216,10 +217,10 @@
                 android:textSize="37sp" />
 
             <Button
-                android:elevation="5dp"
                 android:id="@+id/button7"
                 android:layout_width="80dp"
                 android:layout_height="95dp"
+                android:elevation="5dp"
                 android:fontFamily="@font/poppins_medium"
                 android:onClick="btnClick"
                 android:tag="12"
@@ -229,11 +230,11 @@
                 android:textSize="37sp" />
 
             <Button
-                android:elevation="5dp"
                 android:id="@+id/button8"
                 android:layout_width="80dp"
                 android:layout_height="95dp"
                 android:layout_marginStart="10dp"
+                android:elevation="5dp"
                 android:fontFamily="@font/poppins_medium"
                 android:onClick="btnClick"
                 android:tag="13"
@@ -249,10 +250,10 @@
             android:orientation="horizontal">
 
             <Button
-                android:elevation="5dp"
                 android:id="@+id/button9"
                 android:layout_width="80dp"
                 android:layout_height="95dp"
+                android:elevation="5dp"
                 android:fontFamily="@font/poppins_medium"
                 android:onClick="btnClick"
                 android:tag="20"
@@ -261,11 +262,11 @@
                 android:textSize="37sp" />
 
             <Button
-                android:elevation="5dp"
                 android:id="@+id/button10"
                 android:layout_width="80dp"
                 android:layout_height="95dp"
                 android:layout_marginHorizontal="10dp"
+                android:elevation="5dp"
                 android:fontFamily="@font/poppins_medium"
                 android:onClick="btnClick"
                 android:tag="21"
@@ -275,10 +276,10 @@
                 android:textSize="37sp" />
 
             <Button
-                android:elevation="5dp"
                 android:id="@+id/button11"
                 android:layout_width="80dp"
                 android:layout_height="95dp"
+                android:elevation="5dp"
                 android:fontFamily="@font/poppins_medium"
                 android:onClick="btnClick"
                 android:tag="22"
@@ -288,11 +289,11 @@
                 android:textSize="37sp" />
 
             <Button
-                android:elevation="5dp"
                 android:id="@+id/button12"
                 android:layout_width="80dp"
                 android:layout_height="95dp"
                 android:layout_marginStart="10dp"
+                android:elevation="5dp"
                 android:fontFamily="@font/poppins_medium"
                 android:onClick="btnClick"
                 android:tag="23"
@@ -308,10 +309,10 @@
             android:orientation="horizontal">
 
             <Button
-                android:elevation="5dp"
                 android:id="@+id/button13"
                 android:layout_width="80dp"
                 android:layout_height="95dp"
+                android:elevation="5dp"
                 android:fontFamily="@font/poppins_medium"
                 android:onClick="btnClick"
                 android:tag="30"
@@ -320,11 +321,11 @@
                 android:textSize="37sp" />
 
             <Button
-                android:elevation="5dp"
                 android:id="@+id/button14"
                 android:layout_width="80dp"
                 android:layout_height="95dp"
                 android:layout_marginHorizontal="10dp"
+                android:elevation="5dp"
                 android:fontFamily="@font/poppins_medium"
                 android:onClick="btnClick"
                 android:tag="31"
@@ -334,10 +335,10 @@
                 android:textSize="37sp" />
 
             <Button
-                android:elevation="5dp"
                 android:id="@+id/button15"
                 android:layout_width="80dp"
                 android:layout_height="95dp"
+                android:elevation="5dp"
                 android:fontFamily="@font/poppins_medium"
                 android:onClick="btnClick"
                 android:tag="32"
@@ -347,11 +348,11 @@
                 android:textSize="37sp" />
 
             <Button
-                android:elevation="5dp"
                 android:id="@+id/button16"
                 android:layout_width="80dp"
                 android:layout_height="95dp"
                 android:layout_marginStart="10dp"
+                android:elevation="5dp"
                 android:fontFamily="@font/poppins_medium"
                 android:onClick="btnClick"
                 android:tag="33"
