--- a/app/src/main/res/layout/go_back_dialog.xml
+++ b/app/src/main/res/layout/go_back_dialog.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="@drawable/dialogs_back"
     android:gravity="center"
-    android:padding="10dp"
-    android:background="@drawable/dialogs_back">
+    android:orientation="vertical"
+    android:padding="10dp">
 
 
     <TextView
@@ -52,8 +50,8 @@
             android:id="@+id/yesBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/poppins_medium"
             android:backgroundTint="@color/matchingPaletteColor"
+            android:fontFamily="@font/poppins_medium"
             android:text="Yes" />
 
         <Button
@@ -61,8 +59,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="60dp"
-            android:fontFamily="@font/poppins_medium"
             android:backgroundTint="@color/matchingPaletteColor"
+            android:fontFamily="@font/poppins_medium"
             android:text="No" />
 
     </LinearLayout>
