--- a/app/src/main/res/layout/win_dialog.xml
+++ b/app/src/main/res/layout/win_dialog.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="5dp"
-    android:background="@drawable/dialogs_back">
+    android:background="@drawable/dialogs_back"
+    android:padding="5dp">
 
     <TextView
         android:id="@+id/textView4"
@@ -33,8 +32,8 @@
         android:id="@+id/cardView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
         android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="12dp"
         app:cardCornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,25 +42,25 @@
         <LinearLayout
             android:layout_width="250dp"
             android:layout_height="match_parent"
-            android:gravity="center"
             android:layout_marginHorizontal="10dp"
+            android:gravity="center"
             android:orientation="horizontal"
             android:padding="15dp">
 
             <TextView
                 android:id="@+id/movesTvDialog"
                 android:layout_width="0dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:singleLine="true"
-                android:layout_height="wrap_content"
                 android:text="Moves:" />
 
             <TextView
                 android:id="@+id/timeTvDialog"
                 android:layout_width="0dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="end"
-                android:layout_height="wrap_content"
                 android:text="Time:" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
@@ -69,9 +68,9 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="5dp"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
