--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -10,13 +10,28 @@
     tools:ignore="HardcodedText"
     tools:context=".SettingsActivity">
 
+    <ImageView
+        android:id="@+id/goBackbtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="10dp"
+        android:clickable="true"
+        android:background="?attr/selectableItemBackground"
+        android:padding="10dp"
+        android:scaleType="fitStart"
+        android:src="@drawable/ic_baseline_arrow_back_ios_24"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/textColor" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/goBackbtn">
 
         <RadioGroup
             android:id="@+id/difficultyRG"
@@ -36,8 +51,7 @@
                 android:fontFamily="@font/poppins_medium"
                 android:text="Select difficulty:"
                 android:textColor="@color/textColor"
-                android:textSize="18sp"
-                />
+                android:textSize="18sp" />
 
             <RadioButton
                 android:id="@+id/easyRB"
@@ -73,7 +87,7 @@
                 android:fontFamily="@font/poppins_medium"
                 android:text="( game duration )   "
                 android:textColor="@color/textColor"
-                android:textSize="15sp"/>
+                android:textSize="15sp" />
         </RadioGroup>
 
         <RadioGroup
@@ -113,6 +127,7 @@
                 android:text="4x4"
                 android:textColor="@color/textColor"
                 android:textSize="18sp" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -120,7 +135,7 @@
                 android:fontFamily="@font/poppins_medium"
                 android:text="( tiles layout )   "
                 android:textColor="@color/textColor"
-                android:textSize="15sp"/>
+                android:textSize="15sp" />
         </RadioGroup>
     </LinearLayout>
 
