--- a/app/src/main/res/layout/activity_game_activity3x3.xml
+++ b/app/src/main/res/layout/activity_game_activity3x3.xml
@@ -263,4 +263,14 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
         app:tint="@color/shuffleBtnColor" />
 
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:adSize="BANNER"
+        app:adUnitId="ca-app-pub-3862530189628759/7112729337"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
